add new website from server na

--- a/xem-phim-bo/the-gioi-vo-hiep-kim-dung/index.html
+++ b/xem-phim-bo/the-gioi-vo-hiep-kim-dung/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1661,62 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yellow-submarine" title="Yellow Submarine">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-chu-cua-ta" title="Thành Chủ Của Ta">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yellow-submarine-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-chu-cua-ta-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yellow Submarine
+             Thành Chủ Của Ta
             </span>
             <span class="list-top-movie-item-en">
-             Yellow Submarine
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-kinh-di-my-phan-9" title="Truyện Kinh Dị Mỹ (Phần 9)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-kinh-di-my-phan-9-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truyện Kinh Dị Mỹ (Phần 9)
-            </span>
-            <span class="list-top-movie-item-en">
-             American Horror Story (Season 9)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/drishyam" title="Drishyam">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/drishyam-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Drishyam
-            </span>
-            <span class="list-top-movie-item-en">
-             Drishyam
+             The Castellan Belongs to Me
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1727,18 +1683,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-tien-dao-thu-11" title="Thám Tử Lừng Danh Conan: Tiền Đạo Thứ 11">
+          <a class="list-top-movie-link" href="/phim-moi/sam-cat-phan-1b" title="Sam &amp; Cat (Phần 1B)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-tien-dao-thu-11-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sam-cat-phan-1b-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Lừng Danh Conan: Tiền Đạo Thứ 11
+             Sam &amp; Cat (Phần 1B)
             </span>
             <span class="list-top-movie-item-en">
-             Detective Conan: The Eleventh Striker
+             Sam &amp; Cat (Season 1B)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/giau-em" title="Giấu Em">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giau-em-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Giấu Em
+            </span>
+            <span class="list-top-movie-item-en">
+             Sakla Beni
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1749,21 +1727,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khu-vuon-bi-mat" title="Khu vườn bí mật">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-ma" title="Thành phố ma">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khu-vuon-bi-mat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-ma-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khu vườn bí mật
+             Thành phố ma
             </span>
             <span class="list-top-movie-item-en">
-             Secret Garden
+             City of Ghosts
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/du-khanh-thu" title="Dư Khanh Thư">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-khanh-thu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Dư Khanh Thư
+            </span>
+            <span class="list-top-movie-item-en">
+             Fairyland Romance
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
