add new website from server na

--- a/xem-phim-bo/hieu-trieu-tich/index.html
+++ b/xem-phim-bo/hieu-trieu-tich/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1663,21 +1663,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoc-chay-thanh-xuan" title="Bước chạy thanh xuân">
+          <a class="list-top-movie-link" href="/phim-moi/lang-khach-rurouni-kenshin" title="Lãng Khách Rurouni Kenshin">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoc-chay-thanh-xuan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lang-khach-rurouni-kenshin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bước chạy thanh xuân
+             Lãng Khách Rurouni Kenshin
             </span>
             <span class="list-top-movie-item-en">
-             Kaze ga Tsuyoku Fuiteiru Kazetsuyo
+             Rurouni Kenshin
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1685,40 +1685,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-muu-my-an-mang-bach-tuoc" title="Âm mưu Mỹ: Án mạng Bạch tuộc">
+          <a class="list-top-movie-link" href="/phim-moi/tan-huong-mot-ngay-voi-dien-vien-av-noi-tieng" title="Tận Hưởng Một Ngày Với Diễn Viên AV Nổi Tiếng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-muu-my-an-mang-bach-tuoc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-huong-mot-ngay-voi-dien-vien-av-noi-tieng-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Âm mưu Mỹ: Án mạng Bạch tuộc
+             Tận Hưởng Một Ngày Với Diễn Viên AV Nổi Tiếng
             </span>
             <span class="list-top-movie-item-en">
-             American Conspiracy: The Octopus Murders
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hanh-dong-moscow" title="Hành Động Moscow">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-dong-moscow-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hành Động Moscow
-            </span>
-            <span class="list-top-movie-item-en">
-             Operation Moscow
+             도전AV : 그녀들의 입스킬을 버텨라
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1729,18 +1707,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pinky-malinky-phan-1" title="Pinky Malinky (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-tu-do" title="Hành Trình Tự Do">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pinky-malinky-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-tu-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pinky Malinky (Phần 1)
+             Hành Trình Tự Do
             </span>
             <span class="list-top-movie-item-en">
-             Pinky Malinky (Season 1)
+             Emancipation
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1751,21 +1729,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bi-mat-gioi-the-thao-vu-sat-hai-air-mcnair" title="Bí Mật Giới  Thể Thao: Vụ Sát Hại Air McNair">
+          <a class="list-top-movie-link" href="/phim-moi/sac-mau-thien-duong" title="Sắc Màu Thiên Đường">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-gioi-the-thao-vu-sat-hai-air-mcnair-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sac-mau-thien-duong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bí Mật Giới  Thể Thao: Vụ Sát Hại Air McNair
+             Sắc Màu Thiên Đường
             </span>
             <span class="list-top-movie-item-en">
-             Untold: The Murder of Air McNair
+             The Colour of Paradise
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-croods-ky-nguyen-moi" title="Gia Đình Croods: Kỷ Nguyên Mới">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-croods-ky-nguyen-moi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Gia Đình Croods: Kỷ Nguyên Mới
+            </span>
+            <span class="list-top-movie-item-en">
+             The Croods: A New Age
+            </span>
+            <span class="list-top-movie-item-view">
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
