add new website from server na

--- a/xem-phim-moi/nhung-nguoi-ban-tuong-tuong/index.html
+++ b/xem-phim-moi/nhung-nguoi-ban-tuong-tuong/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1726,28 +1726,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1760,6 +1738,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1783,18 +1783,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hen-ho-vu-vo-phan-2" title="Hẹn hò vu vơ (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/am-nhac-duong-pho" title="Âm Nhạc Đường Phố">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hen-ho-vu-vo-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-nhac-duong-pho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hẹn hò vu vơ (Phần 2)
+             Âm Nhạc Đường Phố
             </span>
             <span class="list-top-movie-item-en">
-             Dating Around (Season 2)
+             Sing Street
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vu-em-fbi-3-cha-nao-con-nay" title="Vú Em FBI 3: Cha Nào Con Nấy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-em-fbi-3-cha-nao-con-nay-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vú Em FBI 3: Cha Nào Con Nấy
+            </span>
+            <span class="list-top-movie-item-en">
+             Big Momma's 3: Like Father, Like Son
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1805,21 +1827,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gio-cao-diem" title="Giờ Cao Điểm">
+          <a class="list-top-movie-link" href="/phim-moi/dem-thu-3-kinh-hoang" title="Đêm Thứ 3 Kinh Hoàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gio-cao-diem-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-thu-3-kinh-hoang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giờ Cao Điểm
+             Đêm Thứ 3 Kinh Hoàng
             </span>
             <span class="list-top-movie-item-en">
-             Rush Hour
+             3rd Night
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1827,40 +1849,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lan-sua-doi-thu-13" title="Lần sửa đổi thứ 13">
+          <a class="list-top-movie-link" href="/phim-moi/hien-tuong-sieu-nhien-o-tokyo" title="Hiện Tượng Siêu Nhiên Ở Tokyo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lan-sua-doi-thu-13-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hien-tuong-sieu-nhien-o-tokyo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lần sửa đổi thứ 13
+             Hiện Tượng Siêu Nhiên Ở Tokyo
             </span>
             <span class="list-top-movie-item-en">
-             13TH
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nam-than-bot-song" title="Nam Thần Bọt Sóng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-than-bot-song-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nam Thần Bọt Sóng
-            </span>
-            <span class="list-top-movie-item-en">
-             Mermaid Prince
+             Paranormal Activity: Tokyo Night
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1871,21 +1871,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-truy-quet-ma-tuy" title="Biệt Đội Truy Quét Ma Túy">
+          <a class="list-top-movie-link" href="/phim-moi/co-gai-nam-ay-chung-ta-cung-theo-duoi" title="Cô Gái Năm Ấy Chúng Ta Cùng Theo Đuổi">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-truy-quet-ma-tuy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-gai-nam-ay-chung-ta-cung-theo-duoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biệt Đội Truy Quét Ma Túy
+             Cô Gái Năm Ấy Chúng Ta Cùng Theo Đuổi
             </span>
             <span class="list-top-movie-item-en">
-             Drug Hunting Operation
+             You Are The Apple Of My Eye
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
